Decrease font size in search in topology due to visibility issue in Chrome

--- a/app/assets/stylesheets/container_topology.css
+++ b/app/assets/stylesheets/container_topology.css
@@ -54,10 +54,6 @@ kubernetes-topology-graph {
     text-align: center;
 }
 
-.search-topology .form-control {
-    font-size: 20px;
-}
-
 .container_topology #selected {
     float: right;
     display: block;
